Completed screens 1-4 screen 1 - splash screen screen 2 - menu with options "Full Map" & "Desks" screen 3 - full map of ericsson with zoom functions screen 4 - screens that shows dropdowns for selecting zones (from..to) and go button

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MapsPage" />
+        <activity android:name=".FullMapActivity" />
         >
-        <activity android:name=".MapsViewActivity" />
+        <activity android:name=".SecondScreenActivity" />
         <activity android:name=".DesksPage"></activity>
     </application>
 
