most of screen 6 - the correct maps (coloured) are shown when two zones are selected and the "go" button is clicked

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,10 @@
         </activity>
         <activity android:name=".SecondScreenActivity" />
         <activity android:name=".FullMapActivity" />
-        <activity android:name=".DesksPage"/>
+        <activity android:name=".DesksPage" />
+        <activity android:name=".GroundFloorRouteActivity" />
+        <activity android:name=".FirstFloorRouteActivity" />
+        <activity android:name=".TwoFloorsRouteActivity"></activity>
     </application>
 
 </manifest>
