--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
 
+    implementation 'me.dm7.barcodescanner:zxing:1.9.8'
+
     implementation project(path: ':library')
 
 }
