--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -27,9 +26,9 @@
         <activity android:name=".TwoFloorsRouteActivity" />
         <activity
             android:name=".treasure"
-            android:label="@string/title_activity_treasure"
-           />
-        <activity android:name=".ScanActivity"/>
+            android:label="@string/title_activity_treasure" />
+        <activity android:name=".ScanActivity" />
+        <activity android:name=".TreasureHuntGame"></activity>
     </application>
 
 </manifest>
